<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Audio Sword</string>
    <string name="notification_disconnected_title">Myo armband disconnected</string>
    <string name="notification_connected_title">Myo armband connected</string>
    <string name="notification_unlocked_title">Myo armband unlocked</string>
    <string name="notification_text">Touch to go to Myo Glass Companion.</string>
    <string name="start">Screencast</string>
    <string name="stop">Stop Screencast</string>
    <string name="choose_myo">Choose Myo</string>
    <string name="choose_glass">Choose Glass</string>
    <string name="myo_arm_left">Arm: Left</string>
    <string name="myo_arm_right">Arm: Right</string>
    <string name="myo_arm_unknown">Arm: Unknown</string>
    <string name="connected">CONNECTED</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="no_devices_title">No paired devices.</string>
    <string name="no_devices_message">Glass must be paired before connecting.</string>
    <string name="kill_myglass">Kill MyGlass</string>

    <string name="start_location">Start</string>
    <string name="stop_location">Stop</string>
    <string name="action_settings">Settings</string>
    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <string name="action_speak">Speak Messages</string>

    <string name="dialer_app">Dialer</string>
    <string name="yelp_app">Yelp</string>
    <string name="title_activity_yelp">YelpActivity</string>
    <string name="swoosh_earcon">Swoosh_Earcon</string>
    <string name="lock_earcon">Lock_Earcon</string>
    <string name="unlock_earcon">Unlock_Earcon</string>
    <string name="select_earcon">Select_Earcon</string>
    <string name="help_earcon">Help_Earcon</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_activity_training">TrainingActivity</string>
    <string name="app_drawer">App_Drawer</string>
    <string name="training">Training</string>
    <string name="stop_speech">Stop Speech</string>
    <string name="call_help">Call Help</string>
    <string name="myo_lock">Lock Myo</string>
    <string name="myo_unlock">Unlock Myo</string>

</resources>
