<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.thalmic.android.audiosword.ConfigActivity"
    tools:ignore="ButtonStyle"
    android:orientation="vertical"
    android:background="@android:color/background_light">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/screenshot" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*"
        android:columnCount="2">

        <TableRow
            android:layout_weight="1">

            <Button
                android:text="@string/app_drawer"
                android:onClick="openAppDrawer"
                android:id="@+id/stop_button"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                android:layout_height="fill_parent" />

            <Button
                android:text="@string/training"
                android:onClick="openTrainingApplication"
                android:id="@+id/start_button"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_weight="1">

            <Button
                android:text="@string/dialer_app"
                android:onClick="openDialerApplication"
                android:id="@+id/open_dialer"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                android:layout_height="fill_parent" />

            <Button
                android:text="@string/yelp_app"
                android:onClick="openYelpApplication"
                android:id="@+id/open_Yelp"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_weight="1">

            <TextView
                android:id="@+id/myo_status"
                tools:text="Myo Status"
                android:gravity="center"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                style="@android:style/TextAppearance.Small.Inverse" />

            <TextView
                android:id="@+id/glass_status"
                tools:text="Glass Status"
                android:gravity="center"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                style="@android:style/TextAppearance.Small.Inverse"  />

        </TableRow>

        <TableRow
            android:layout_weight="1">

            <Button
                android:text="@string/choose_myo"
                android:onClick="onChooseMyoClicked"
                android:layout_margin="5dp"
                android:layout_width="0dp" />

            <Button
                android:text="@string/choose_glass"
                android:onClick="onChooseGlassClicked"
                android:layout_margin="5dp"
                android:layout_width="0dp" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/arm"
                android:gravity="center"
                tools:text="@string/myo_arm_left"
                android:layout_gravity="center"
                android:layout_width="0dp"
                style="@android:style/TextAppearance.Small.Inverse" />

            <TextView
                android:id="@+id/pose"
                android:gravity="center"
                tools:text="THUMB_TO_PINKY"
                android:layout_gravity="center"
                android:layout_width="0dp"
                style="@android:style/TextAppearance.Small.Inverse" />
        </TableRow>

        <TableRow
            android:layout_weight="1">

            <Button
                android:text="@string/stop_speech"
                android:onClick="stopSpeech"
                android:layout_margin="5dp"
                android:layout_width="0dp" />

            <Button
                android:text="@string/call_help"
                android:onClick="callHelp"
                android:layout_margin="5dp"
                android:layout_width="0dp" />
        </TableRow>

        <TableRow
            android:layout_weight="1">

            <Button
                android:text="@string/myo_unlock"
                android:onClick="unlockMyo"
                android:layout_margin="5dp"
                android:layout_width="0dp" />

            <Button
                android:text="@string/myo_lock"
                android:onClick="lockMyo"
                android:layout_margin="5dp"
                android:layout_width="0dp" />
        </TableRow>
    </TableLayout>

</LinearLayout>
